# drivestudio

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: omnire.yaml
configs/datasets/waymo/: 3cams.yaml
tools/: eval.py
